WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234713
Content Filtering should be using SharedBuffer instead of copying its data
https://bugs.webkit.org/show_bug.cgi?id=234713
Summary
Content Filtering should be using SharedBuffer instead of copying its data
Jean-Yves Avenard [:jya]
Reported
2021-12-27 18:48:36 PST
ContentFilter and NetworkExtensionContentFilter takes a const uint8_t*/int and have to copy the content into a separate buffer. They could instead take a SharedBuffer which would avoid the above.
Attachments
Patch For EWS (combined patch)
(264.85 KB, patch)
2021-12-27 18:54 PST
,
Jean-Yves Avenard [:jya]
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch For Review
(10.55 KB, patch)
2021-12-27 18:58 PST
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Patch For EWS (combined patch)
(279.27 KB, patch)
2021-12-27 19:05 PST
,
Jean-Yves Avenard [:jya]
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch For Review
(10.55 KB, patch)
2021-12-27 19:19 PST
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Patch For EWS (combined patch)
(279.23 KB, patch)
2021-12-27 19:20 PST
,
Jean-Yves Avenard [:jya]
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for EWS testing (combined patch)
(291.28 KB, patch)
2021-12-28 19:07 PST
,
Jean-Yves Avenard [:jya]
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for EWS testing (combined patch)
(286.10 KB, patch)
2021-12-28 19:32 PST
,
Jean-Yves Avenard [:jya]
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.53 KB, patch)
2022-01-06 05:45 PST
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-27 18:49:01 PST
<
rdar://problem/86947433
>
Jean-Yves Avenard [:jya]
Comment 2
2021-12-27 18:54:59 PST
Created
attachment 448019
[details]
Patch For EWS (combined patch)
Jean-Yves Avenard [:jya]
Comment 3
2021-12-27 18:58:09 PST
Created
attachment 448020
[details]
Patch For Review
Jean-Yves Avenard [:jya]
Comment 4
2021-12-27 19:05:53 PST
Created
attachment 448021
[details]
Patch For EWS (combined patch)
Jean-Yves Avenard [:jya]
Comment 5
2021-12-27 19:19:21 PST
Created
attachment 448024
[details]
Patch For Review
Jean-Yves Avenard [:jya]
Comment 6
2021-12-27 19:20:31 PST
Created
attachment 448025
[details]
Patch For EWS (combined patch)
Jean-Yves Avenard [:jya]
Comment 7
2021-12-28 19:07:59 PST
Created
attachment 448062
[details]
Patch for EWS testing (combined patch)
Jean-Yves Avenard [:jya]
Comment 8
2021-12-28 19:32:15 PST
Created
attachment 448063
[details]
Patch for EWS testing (combined patch)
youenn fablet
Comment 9
2022-01-06 04:09:00 PST
Comment on
attachment 448024
[details]
Patch For Review LGTM once bots are happy View in context:
https://bugs.webkit.org/attachment.cgi?id=448024&action=review
> Source/WebCore/loader/ContentFilter.cpp:154 > + forEachContentFilterUntilBlocked([data = Ref { data }](PlatformContentFilter& contentFilter) {
s/PlatformContentFilter/auto/
Jean-Yves Avenard [:jya]
Comment 10
2022-01-06 05:45:46 PST
Created
attachment 448491
[details]
Patch Apply comment
EWS
Comment 11
2022-01-06 08:36:24 PST
Committed
r287687
(
245783@main
): <
https://commits.webkit.org/245783@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448491
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug