Content Filtering should be using SharedBuffer instead of copying its data https://bugs.webkit.org/show_bug.cgi?id=234713 rdar://problem/86947433

Reviewed by Youenn Fablet.

We can directly construct the NSData used by ParentalControlsContentFilter
and NetworkExtensionContentFilter from the SharedBuffer.

No change in observable behaviour.

* loader/ContentFilter.cpp:
(WebCore::ContentFilter::continueAfterDataReceived):
* loader/ContentFilter.h:
* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::dataReceived):
* platform/PlatformContentFilter.h:
* platform/cocoa/NetworkExtensionContentFilter.h:
* platform/cocoa/NetworkExtensionContentFilter.mm:
(WebCore::NetworkExtensionContentFilter::addData):
* platform/cocoa/ParentalControlsContentFilter.h:
* platform/cocoa/ParentalControlsContentFilter.mm:
(WebCore::ParentalControlsContentFilter::addData):
* testing/MockContentFilter.cpp:
(WebCore::MockContentFilter::addData):
* testing/MockContentFilter.h:



Canonical link: https://commits.webkit.org/245783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287687 268f45cc-cd09-0410-ab3c-d52691b4dbfc