Source/WebCore/platform/PlatformContentFilter.h
@@ -26,15 +26,17 @@
 #ifndef PlatformContentFilter_h
 #define PlatformContentFilter_h
 
+#include "SharedBuffer.h"
 #include <wtf/Ref.h>
 #include <wtf/text/WTFString.h>
 
 namespace WebCore {
 
 class ContentFilterUnblockHandler;
+class FragmentedSharedBuffer;
 class ResourceRequest;
 class ResourceResponse;
-class FragmentedSharedBuffer;
+class SharedBuffer;
 
 class PlatformContentFilter {
     WTF_MAKE_FAST_ALLOCATED;
@@ -54,7 +56,7 @@ public:
     virtual ~PlatformContentFilter() = default;
     virtual void willSendRequest(ResourceRequest&, const ResourceResponse&) = 0;
     virtual void responseReceived(const ResourceResponse&) = 0;
-    virtual void addData(const uint8_t* data, int length) = 0;
+    virtual void addData(const SharedBuffer&) = 0;
     virtual void finishedAddingData() = 0;
     virtual Ref<FragmentedSharedBuffer> replacementData() const = 0;
 #if ENABLE(CONTENT_FILTERING)
